# Tickets-For-Sale

./: .gitignore  LICENSE  TrainSaveCLI.cpp  TrainSaveCLI.sln  customer_names.txt  debug_main.cpp  main.cpp  meson.build  test_purchase_history.cpp
code/: defines.h  ftxui_menu.cpp  game.cpp  game.h  helpers.cpp  helpers.h  save_system.cpp  save_system.h  serialization.h
code/app/: tickets_for_sale_app.cpp  tickets_for_sale_app.h
code/menus/: barter_menu.cpp  base_menu.cpp  base_menu.h  game_state.cpp  main_menu.cpp  main_menu.h  main_menu1.h  menu_state_manager.cpp  menu_state_manager.h  menu_system.h  new_game_menu.cpp  options_menu.cpp  save_slot_utils.h  save_system_menus.cpp  save_system_menus.h  save_system_menus1.h  settings_manager.cpp  settings_manager.h  statistics_menu.cpp  ticket_counter_menu.cpp  ticket_inventory_menu.cpp  ticket_purchasing_menu.cpp
code/objects/: customers.cpp  customers.h  tickets.cpp  tickets.h
